--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,4 +1,9 @@
-FROM node:18-alpine
+FROM node:18
+
+RUN apt update && \
+    apt install -y wget netcat && \
+    wget -q -O /usr/bin/wait-for https://raw.githubusercontent.com/eficode/wait-for/v2.2.3/wait-for && \
+    chmod +x /usr/bin/wait-for
 
 WORKDIR /home/node/app
 
@@ -7,6 +12,3 @@ COPY ./src/package.json .
 RUN npm i -g nodemon
 
 RUN npm install
-
-CMD [ "npm", "run", "start" ]
-EXPOSE 3030
